--- a/WezenSchedule/html/schedule.html
+++ b/WezenSchedule/html/schedule.html
@@ -1,6 +1,17 @@
 <html><head><script type="text/javascript">
 var schedule_url = "https://b3ivwb09fg.execute-api.us-east-1.amazonaws.com/Alpha";
 
+<!--*******************************handle input / output********************************************-->
+
+function run(){
+	var month = document.getElementById("selectmonth").value;
+	if (month == "nomonth"){
+		month = "November"
+	}
+	document.getElementById("displaymonth").innerHTML = month;
+}
+
+
 function processResponse(arg1, arg2, result) {
   // Can grab any DIV or SPAN HTML element and can then manipulate its
   // contents dynamically via javascript
@@ -42,9 +53,177 @@ function handleClick(e) {
     }
   };
 }
-</script></head><body>
+</script>
 
-<h1>Request to add values </h1>
+
+<!--*******************************Design Page Elements********************************************-->
+<title> Team Wezen Scheduler</title> 	<!--tab text-->
+<style>
+	body{background-color: honeydew;} 	
+	header{
+		background-color: darkgrey;
+		padding: 10px;
+		text-align: center;
+		color: white;
+	}
+	nav {								
+		padding: 10px;
+		background: #ccc;
+	}
+	
+	section:after{
+		content: "";
+		display: table;
+		clear: both;
+	}
+	
+	
+	
+	
+	
+	
+	ul {list-style-type: none;
+	    display: inline-block;
+	}
+
+/* Month header */
+.month {
+    padding: 20px 25px;
+    background: #1abc9c;
+    text-align: center;
+}
+
+/* Month list */
+.month ul {
+    margin: 0;
+    padding: 0;
+}
+
+.month ul li {
+    color: white;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+/* Previous button inside month header */
+.month .prev {
+    float: left;
+    padding-top: 30px;
+    padding-right: 100px;
+}
+
+/* Next button */
+.month .next {
+    float: right;
+    padding-top: 30px;
+    padding-left: 100px;
+}
+
+
+/* Days (1-31) */
+.days {
+    padding: 10px 5px;
+    background: #ddd;
+    width: 11.65%;
+    margin: 3;
+}
+
+.days li {
+    text-align: center;
+    font-size:14px;
+    color: #666;
+}
+
+		
+		
+		
+		
+</style>
+</head><body>
+
+<!--*******************************lay out page********************************************-->
+
+<header><h1>Team Wezen Scheduler</h1></header>
+<section>
+	<nav><b>Filter By: </b><br>
+		<label for="dayofweek">Day of Week</label>
+		<select id="dayofweek" onchange="run()">
+		  <option value="0">--none--</option>
+		  <option value="1">Monday</option>
+		  <option value="2">Tuesday</option>
+		  <option value="3">Wednesday</option>
+		  <option value="4">Thursday</option>
+		  <option value="5">Friday</option>
+		  <option value="6">Saturday</option>
+		  <option value="7">Sunday</option>
+		</select>
+		
+
+		<label for="selectmonth">Month</label>
+		<select id="selectmonth" onchange="run()">
+		  <option value="nomonth">--none--</option>
+		  <option value="January">January</option>
+		  <option value="February">February</option>
+		  <option value="March">March</option>
+		  <option value="April">April</option>
+		  <option value="May">May</option>
+		  <option value="June">June</option>
+		  <option value="July">July</option>
+		  <option value="August">August</option>
+		  <option value="September">September</option>
+		  <option value="October">October</option>
+		  <option value="November">November</option>
+		  <option value="December">December</option>
+		</select>
+	</nav>
+</section>
+
+
+
+
+
+
+
+<section>
+	<div class="month"> 
+  <ul>
+    <li class="prev">&#10094;</li>
+    <li class="next">&#10095;</li>
+    <li><h2 id="displaymonth">November</h2><br><span style="font-size:18px">2018</span></li>
+    
+  </ul>
+</div>
+	<ul class="days"><li>Monday</li></ul>
+	<ul class="days"><li>Tuesday</li></ul>
+	<ul class="days"><li>Wednesday</li></ul>
+	<ul class="days"><li>Thursday</li></ul>
+	<ul class="days"><li>Friday</li></ul>
+	<ul class="days"><li>Saturday</li></ul>
+	<ul class="days"><li>Sunday</li></ul>
+
+
+</section>
+<section>
+	<nav>
+		<ul class="days"><li>1</li></ul>
+		<ul class="days"><li>2</li></ul>
+		<ul class="days"><li>3</li></ul>
+		<ul class="days"><li>4</li></ul>
+		<ul class="days"><li>5</li></ul>
+		<ul class="days"><li>6</li></ul>
+		<ul class="days"><li>7</li></ul>
+
+	</nav>
+</section>
+
+
+
+
+
+
+
+
 
 <form name="addForm" method="post" name="addValues">
   <input name="arg1" value="" /><input name="arg2" value="" /><input name="result" readonly/>
