Process without Free buttons

--- a/WezenSchedule/html/schedule.html
+++ b/WezenSchedule/html/schedule.html
@@ -92,9 +92,43 @@ function monthView(){
     }
 }
 
-function handleFreeButton(day){
-    return function() {
-        alert("free: " + day);
+function processDateResponse(name, result) {
+	// Can grab any DIV or SPAN HTML element and can then manipulate its
+	// contents dynamically via javascript
+	console.log("result:" + result);
+	var js = JSON.parse(result);
+	
+	var response = js["name"];
+	
+	// Update response
+	alert("free: " + response);
+}
+
+function handleFreeButton(e){
+	var name = form.name.value;
+	
+	var data = {};
+	data["name"] = name;
+
+	var js = JSON.stringify(data);
+	console.log("JS:" + js);
+	var xhr = new XMLHttpRequest();
+	xhr.open("POST", create_url, true);
+	
+	// send the collected date as JSON
+	xhr.send(js);
+	
+	// This will process results and update HTML as appropriate
+	xhr.onloadend = function() {
+		console.log(xhr);
+		console.log(xhr.request);
+		if(xhr.readyState == XMLHttpRequest.DONE) {
+			console.log ("XHR:" + xhr.responseText);
+			processDateResponse(name, xhr.responseText);
+		} else {
+			processDateResponse(name, "N/A");
+		}
+        //alert("free: " + day);
     }
 }
 
@@ -500,7 +534,12 @@ table{
 	<table id="timeslot"></table>
 </section>
 
-</seciton>
+<h2>Constants</h2>
+
+<form name="createForm" method="post" name="createConstant">
+  <input name="name" value="" /><input name="value" value="" /><input name="result" readonly/>
+  <input type="button" value="Submit"  onClick="JavaScript:handleCreateClick(this)">
+</form>
 
 </body>
 </html>
