--- a/WezenSchedule/html/participant.html
+++ b/WezenSchedule/html/participant.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="basestyle.css">
+    <link rel="stylesheet" type="text/css" href="https://b3ivwb09fg.execute-api.us-east-1.amazonaws.com/Alpha/basestyle.css">
   </head>
   <body>
     <script src="calendarscript.js"></script>
     <title> Participant Scheduler</title>
     <header>
     	<h1>Team Wezen Scheduler</h1>
+      <h2>Participant Portal</h2>
     </header>
 
 
