--- a/WezenSchedule/html/participant.html
+++ b/WezenSchedule/html/participant.html
@@ -111,7 +111,7 @@
     	  <ul>
     	    <li class="prev">&#10094;</li>
     	    <li class="next">&#10095;</li>
-    	    <li><h2 id="displaymonth">November</h2><br><span style="font-size:18px">2018</span></li>
+    	    <li><h2 id="displaymonth">November</h2><br><span id="showyear" style="font-size:18px">2018</span></li>
     	  </ul>
     	</div>
 
@@ -130,7 +130,7 @@
     	<div id ="mtngPrompt" class="login">
     		<form  class="login-content animate">
     	    <div class="container">
-    	      <label for="mtngName"><b>Name For Meeting: </b></label>
+    	      <label id="mtnglabel" for="mtngName"><b>Name For Meeting: </b></label>
     	      <input type="text" id="mtngName" placeholder="Enter Name" required>
 
     	      <button type="submit">Submit</button>
